--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async defer src="https://nullitics.com/script.js"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
